src/objects/Authenticated_Log__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Token_Option1_Match__c</fullName>
        <label>Additional Token Option1 Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Option1__c</fullName>
        <label>Additional Token Option1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Option2_Match__c</fullName>
        <label>Additional Token Option2 Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Option2__c</fullName>
        <label>Additional_Token_Option2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Option3_Match__c</fullName>
        <label>Additional Token Option3 Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Option3__c</fullName>
        <label>Additional_Token_Option3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Other_Text1__c</fullName>
        <label>Additional Token Other Text1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Other_Text2__c</fullName>
        <label>Additional Token Other Text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Token_Other_Text__c</fullName>
        <label>Additional Token Other Text3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BeneficiaryDetailMatch__c</fullName>
        <label>BeneficiaryDetailMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Details__c</fullName>
        <label>Beneficiary Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerPhoneNumber__c</fullName>
        <label>CallerPhoneNumber</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardNumberMatch__c</fullName>
        <label>CardNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_del1__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOBMatch__c</fullName>
        <label>DOBMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailMatch__c</fullName>
        <label>EmailMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_New__c</fullName>
        <label>Email_New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Member Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnteredCardNumber__c</fullName>
        <label>EnteredCardNumber</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredMemberNumber__c</fullName>
        <label>EnteredMemberNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredSSN__c</fullName>
        <label>EnteredSSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICardNumber__c</fullName>
        <label>IdNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Card_Match__c</fullName>
        <label>IVR Card Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Card_Number__c</fullName>
        <label>IVR Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_ID__c</fullName>
        <formula>IF( RecordType.Name = &apos;IVR Authentication Log&apos; &amp;&amp; 
    NOT(CONTAINS(Name, &apos;A&apos;)) , 
VALUE( Name ), 
null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IVR ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IVR_Member_Number_Match__c</fullName>
        <label>IVR Member Number Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Member_Number__c</fullName>
        <label>IVR Member Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_OTP_Result__c</fullName>
        <label>IVR OTP Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Pin_Match__c</fullName>
        <label>IVR Pin Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_SSN_Match__c</fullName>
        <label>IVR SSN Match</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_SSN__c</fullName>
        <label>IVR SSN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Sent_URL__c</fullName>
        <label>IVR Sent URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IdNumberMatch__c</fullName>
        <label>IdNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JointOwner_Details__c</fullName>
        <label>Joint/Owner Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joint_OwnerDetailsMatch__c</fullName>
        <label>Joint/OwnerDetailsMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Detail_Match__c</fullName>
        <label>LoanDetailMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Clear_All_Field__c</fullName>
        <label>Log Clear All Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMNMatch__c</fullName>
        <label>MMNMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMN__c</fullName>
        <label>MMN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNumberMatch__c</fullName>
        <label>MemberNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Loan_Detail__c</fullName>
        <label>Member Loan Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>First_Name__c  &amp; &apos; &apos;  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTP_Email__c</fullName>
        <description>OTP Authentication: Email address that the OTP authentication security code was sent to.</description>
        <label>OTP Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTP_Phone__c</fullName>
        <description>OTP Authentication: Phone number that the security code was sent to</description>
        <label>OTP Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PINMatch__c</fullName>
        <label>PINMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonId__c</fullName>
        <label>PersonId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumberMatch__c</fullName>
        <label>PhoneNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecType__c</fullName>
        <label>RecType</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Persons_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Persons Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Persons__c</fullName>
        <label>Related Persons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSNnumberMatch__c</fullName>
        <label>SSNnumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceID__c</fullName>
        <label>SalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Episys_ID__c</fullName>
        <label>Staff Episys ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <label>Staff Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testRecT__c</fullName>
        <label>testRecT</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testRect1__c</fullName>
        <label>testRect1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Authentication Log</label>
    <listViews>
        <fullName>IVR_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>IVR_ID__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Created_del1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Decision__c</columns>
        <columns>Email__c</columns>
        <columns>PersonId__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>Staff_Episys_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/13/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Authenticated_Log__c.IVR_Authentication_Log</value>
        </filters>
        <label>IVR Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>IVR_Logs</fullName>
        <columns>Created_del1__c</columns>
        <columns>NAME</columns>
        <columns>EnteredMemberNumber__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Email__c</columns>
        <columns>CardNumberMatch__c</columns>
        <columns>IVR_Card_Match__c</columns>
        <columns>IVR_Pin_Match__c</columns>
        <columns>IVR_Member_Number_Match__c</columns>
        <columns>IVR_SSN_Match__c</columns>
        <columns>Joint_OwnerDetailsMatch__c</columns>
        <columns>Loan_Detail_Match__c</columns>
        <columns>Related_Persons_Match__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>notContain</operation>
            <value>OTP</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/12/2017 12:00 AM</value>
        </filters>
        <label>IVR Logs</label>
    </listViews>
    <listViews>
        <fullName>IVR_Logs_Not_Authenticated</fullName>
        <columns>Created_del1__c</columns>
        <columns>NAME</columns>
        <columns>EnteredMemberNumber__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>IVR_Member_Number_Match__c</columns>
        <columns>IVR_SSN_Match__c</columns>
        <columns>IVR_Card_Match__c</columns>
        <columns>IVR_Pin_Match__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>equals</operation>
            <value>Not Authenticated</value>
        </filters>
        <label>IVR Logs Not Authenticated</label>
    </listViews>
    <listViews>
        <fullName>IVR_Logs_Today</fullName>
        <columns>Created_del1__c</columns>
        <columns>IVR_ID__c</columns>
        <columns>NAME</columns>
        <columns>EnteredMemberNumber__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>IVR_Member_Number_Match__c</columns>
        <columns>IVR_SSN_Match__c</columns>
        <columns>IVR_Card_Match__c</columns>
        <columns>IVR_Pin_Match__c</columns>
        <columns>RecType__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>notContain</operation>
            <value>OTP</value>
        </filters>
        <filters>
            <field>Created_del1__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>IVR Logs Today</label>
    </listViews>
    <listViews>
        <fullName>IVR_Logs_Today_Full_IVR_Authentication</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Created_del1__c</columns>
        <columns>NAME</columns>
        <columns>EnteredMemberNumber__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>IVR_Member_Number_Match__c</columns>
        <columns>IVR_SSN_Match__c</columns>
        <columns>IVR_Card_Match__c</columns>
        <columns>IVR_Pin_Match__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>notContain</operation>
            <value>OTP</value>
        </filters>
        <filters>
            <field>Created_del1__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>IVR_Member_Number_Match__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <filters>
            <field>IVR_SSN_Match__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <filters>
            <field>IVR_Card_Match__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <filters>
            <field>IVR_Pin_Match__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <label>IVR Logs Today Full IVR Authentication</label>
    </listViews>
    <listViews>
        <fullName>IVR_Logs_Yesterday</fullName>
        <columns>Created_del1__c</columns>
        <columns>NAME</columns>
        <columns>EnteredMemberNumber__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>IVR_Member_Number_Match__c</columns>
        <columns>IVR_SSN_Match__c</columns>
        <columns>IVR_Card_Match__c</columns>
        <columns>IVR_Pin_Match__c</columns>
        <columns>RecType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>notContain</operation>
            <value>OTP</value>
        </filters>
        <filters>
            <field>Created_del1__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>IVR Logs Yesterday</label>
    </listViews>
    <listViews>
        <fullName>OTP_Logs</fullName>
        <columns>NAME</columns>
        <columns>Member_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>Decision__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OTP_Email__c</columns>
        <columns>OTP_Phone__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision__c</field>
            <operation>startsWith</operation>
            <value>OTP</value>
        </filters>
        <label>OTP Logs</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Authenticated Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authentication Log</pluralLabel>
    <recordTypes>
        <fullName>IVR_Authentication_Log</fullName>
        <active>true</active>
        <label>IVR Authentication Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTP_Authentication_Log</fullName>
        <active>true</active>
        <label>OTP Authentication Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>